added projects 2 and 3

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <tbody>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Introduction to BrainHack Marseille 2022</b>
+              <td class="table-primary"><b>Introduction to BrainHack Marseille 2022 (In-person/Online)</b>
                 <ul>
                   <li>09h00-09h15 - Introduction to the event</li>
                   <li>09h15-10h15 - Projects pitches</li>
@@ -243,7 +243,9 @@
                 <ul>
                   <li>14h30-15h00 - <b>Github basic</b> By David Meunier</li>
                   <li>15h00-15h30 - <b>Github advanced</b> By David Meunier</li>
-                  <li>15h30-16h00 - <b>Introduction to Python or Matlab</b> By Julia Sprenger & Manuel Mercier</li>
+                  <li>15h30-16h00 - <b>Introduction to Matlab</b> By Manuel Mercier</li>
+                  <li>16h00-16h30 - <b>Introduction to Python</b> By Julia Sprenger</li>
+                  <li>16h30-17h00 - <b>Python advanced</b> By Julia Sprenger</li>
                 </ul>
               </td>
             </tr>
@@ -285,10 +287,17 @@
               <td class="table-danger"><b>Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">14h00-17h00</th>
+              <th scope="row" class="align-middle text-nowrap">14h00-15h00</th>
+              <td class="table-success"><b>Hacking</b></td>
+            </tr>
+            <tr>
+              <th scope="row" class="align-middle text-nowrap">15h00-16h00</th>
+              <td class="table-primary"><b>How to archive code with software heritage (In-person/Online)</b> by Sabrina Granger</td>
+            </tr>
+            <tr>
+              <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
               <td class="table-success"><b>Hacking and/or Training:</b>
                 <ul>
-                  <li>15h00-16h00 <b>How to archive code with software heritage</b> by Sabrina Granger</li>
                   <li>16h00-17h00 <b>Training course about "FAIR4RS & SWH"</b> by Julien Caugant</li>
                 </ul>
               </td>
@@ -299,7 +308,7 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">17h15-18h30</th>
-              <td class="table-primary"><b>What Neurosciences In The Anthropocene Era? A participatory workshop</b> By Daniele Schön & Julien Lefevre</td>
+              <td class="table-primary"><b>What Neurosciences In The Anthropocene Era? A participatory workshop (In-person/Online)</b> By Daniele Schön & Julien Lefevre</td>
             </tr>
           </tbody>
         </table>
@@ -329,7 +338,7 @@
               </tr>
               <tr>
                 <th scope="row" class="align-middle text-nowrap">16h30-17h30</th>
-                <td class="table-primary"><b>Wrapping up about the projects - closing the BHM 20222</b>
+                <td class="table-primary"><b>Wrapping up about the projects - closing the BHM 20222 (In-person/Online)</b>
                 </td>
               </tr>
             </tbody>
@@ -356,7 +365,8 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="1"></li> -->
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner">
 
@@ -370,6 +380,32 @@
                   <h5>Automatise your processing pipelines with nipype / pydra</h5>
                 </a>
                 <p>by David Meunier</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 2 : Gut Microbiome -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project2">
+                <img class="mx-auto d-block w-50" src="images/projects/project2.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project2">
+                  <h5>16s Metagenomic analysis of Gut Microbiome</h5>
+                </a>
+                <p>by Dipankar Bachar</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 3 : LFP -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project3">
+                <img class="mx-auto d-block w-50" src="images/projects/project_template.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project3">
+                  <h5>LFP and single units decoding in rats performing a distance estimation task</h5>
+                </a>
+                <p>by Fabrizio Capitano & Pierre-Yves Jacob</p>
               </div>
             </div>
 
@@ -488,6 +524,171 @@
         <hr style="height:20px">
     <!-- ============ End of Project1 =============== -->
 
+    <!-- ======= Project2 description bullet ======= -->
+      <a class="active" id="project2">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project2.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>16s Metagenomic analysis of Gut Microbiome</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://github.com/dumaatravaie" target="_blank">Dipankar Bachar</a>
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project2" role="button" aria-controls="collapse_project2"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project2">
+                16S rRNA gene sequencing is commonly used for identification, classification and quantitation of microbes within complex biological mixtures such as environmental samples and gut samples. Many studies [1][2] are trying to establish the link between the intestinal microbiota with different neurodevelopment, neurogical disorders etc. In these studies the BioInformatic analysis of the data coming from gut samples plays a very important role. So, in our <a href="https://github.com/dumaatravaie/BrainHack_Marseille_2022_16s" target="_blank">brainhack project</a> we will work on the publicly available data from one of these article[1]. So, this project is aimed for those who are interested in the BioInformatic analysis of Gut Microbiota and are also interested in the different pipelines and analysis tools like QIIME2[4] , cutadapt[5] , Kraken2[6] etc.
+                <br>
+                <br>In this project, we propose:
+                <ul>
+                  <li>To go through this [1] article to understand their method of analyzing the gut microbiota</li>
+                  <li>To download their 16s sequencing data from NCBI (submitted by the authors)</li>
+                  <li>To extract and filter the data</li>
+                </ul>
+                <br>For advaced users, We also propose:
+                <ul>
+                  <li>To write( Python ) few tools for filtering the sequencing data</li>
+                  <li>To try to create an Anaconda environment or a Singularity image with the 16s analysis pipeline QIIME2[4]</li>
+                  <li>To try to implement some of the methods of analysis with QIIME2 (as described in the article)</li>
+                  <li>To understand the importance of reproducibility of the results</li>
+                </ul>
+                <br> <b>References</b>
+                <br>[1] The microbial metabolite p-Cresol induces autistic-like behaviors in mice by remodeling the gut microbiota. Patricia Bermudez-Martin et al.
+                <br>[2] Gut Microbiota Regulate Motor Deficits and Neuroinflammation in a Model of Parkinson's Disease. Timothy R Sampson et al.
+                <br>[3] <a href="https://lcsciences.com/16s-rrna-gene-sequencing-for-identification-classification-and-quantitation-of-microbes/" target="_blank">16S rRNA Gene Sequencing for identification, classification and quantitation of microbes</a>
+                <br>[4] Reproducible, interactive, scalable and extensible microbiome data science using QIIME 2. Evan Bolye et al.
+                <br>[5] <a href="https://cutadapt.readthedocs.io/en/stable/" target="_blank">Cutadapt</a>
+                <br>[6] <a href="https://ccb.jhu.edu/software/kraken2/" target="_blank">Kraken 2</a>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Anaconda or Singularity 50%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python 50%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Unix / Linux 25%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Knowledge of 16s sequencing 25%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project2 =============== -->
+
+    <!-- ======= Project3 description bullet ======= -->
+      <a class="active" id="project3">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>LFP and single units decoding in rats performing a distance estimation task</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://lnc.univ-amu.fr/fr/profile/capitano-fabrizio" target="_blank">Fabrizio Capitano</a>, <a href="https://lnc.univ-amu.fr/fr/profile/jacob-pierre-yves" target="_blank">Pierre-Yves Jacob</a>, Celia Laurent & Francesca Sargolini
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project3" role="button" aria-controls="collapse_project3"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project3">
+                Navigating in space requires to continuously updating the representation of its own position in the environment. In poorly cued environments (e.g. in darkness) this can only be done by estimating the direction and the distance in order to compute a vectorial integration of the movement (so called path-integration). In a set of studies in rats we demonstrated that the entorhinal cortex plays a fundamental role in path integration. However, how the circuit infers the running distance is yet to be known. Using a distance estimation task, we discovered that the theta oscillations of the local field potential and the firing pattern of single neurons in the entorhinal cortex correlate with the running distance estimated by the rats. But how much and how well the unitary and the field activity allow the circuit to infer about the travelled distance?
+                In the context of the BrainHack Marseille 2022, we would like to interact and collaborate with people with a good knowledge of neural decoding of EEG-LFP and/or unitary activity in order to implement proper methods to decode the estimated running distance starting from a dataset of electrophysiology recordings in behaving rats. The final goal will be to quantify the information carried by population and single units activity within the entorhinal circuit.
+                <br><a href="https://pubmed.ncbi.nlm.nih.gov/28161726/" target="_blank">Here</a> and <a href="https://pubmed.ncbi.nlm.nih.gov/30783085/" target="_blank">here</a> you’ll find some of our previous studies to have more insight about the neuroscientific framework of the project. 
+                <br>
+                <br>Goals for the BrainHack:
+                <ul>
+                  <li>Discuss about pros and cons of different decoding methods</li>
+                  <li>Sort-out the most appropriate one(s) for our project</li>
+                  <li>Start implementing the analysis on the dataset</li>
+                  <li>More in general, seeding future collaborations</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Neural decoding 100%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                EEG/LFP and single units 80%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Spatial cognition 50%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project3 =============== -->
+
     </section>
 
 
@@ -589,9 +790,7 @@
                 <img src="images/team/bg.png" class="img-fluid" alt="" title="Beau Gosse">
               </div>
               <div class="member-info">
-                <a href="https://youtu.be/yo_Ph9GQjWw?t=19&autoplay=1" target="_blank" title="Please don't click">
-                  <h4>Ruggero Basanisi</h4>
-                </a>
+                <h4>Ruggero Basanisi</h4>
                 <span></span>
                 <p>Postdoc</p>
               </div>
