--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">17h15-18h30</th>
-              <td class="table-primary"><b>What Neurosciences In The Anthropocene Era? A participatory workshop (In-person/Online)</b> By Daniele Schön & Julien Lefevre</td>
+              <td class="table-success"><b>What Neurosciences In The Anthropocene Era? A participatory workshop (In-person)</b> By Daniele Schön & Julien Lefevre</td>
             </tr>
           </tbody>
         </table>
