changed team and program

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">10h15-12h30</th>
               <td class="table-success"><b>Hacking and/or Training:</b>
                 <ul>
-                  <li>11h00-11h45 - <b>Open science</b> By Simon Moré & Manuel Mercier</li>
+                  <li>11h00-11h45 - <b>Open  tools for open science</b> By Simon Moré, Manuel Mercier & ArnaudLe Troter </li>
                   <li>11h45-12h00 - <b>Reproducible science</b> By Guillaume Auzias</li>
                 </ul>
               </td>
@@ -836,6 +836,17 @@
               <div class="pic"><img src="images/team/M².jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>Manuel Mercier</h4>
+                <span></span>
+                <p>Research Engineer</p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-4">
+            <div class="member d-flex align-items-start" data-aos="zoom-in" data-aos-delay="400">
+              <div class="pic"><img src="images/team/Arnaud.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Arnaud Le Troter</h4>
                 <span></span>
                 <p>Research Engineer</p>
               </div>
