added projects 4 and 7

--- a/index.html
+++ b/index.html
@@ -409,6 +409,58 @@
               </div>
             </div>
 
+            <!-- PROJECT 4 : SLAM -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project4">
+                <img class="mx-auto d-block w-50" src="images/projects/project4.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project4">
+                  <h5>SLAM - A pure python package for Surface anaLysis And Modeling</h5>
+                </a>
+                <p>by Guillaume Auzias & Alexandre Pron</p>
+              </div>
+            </div>
+
+            <!-- PROJECT 5 : VR -->
+<!--             <div class="carousel-item">
+              <a class="scrollto active" href="#project5">
+                <img class="mx-auto d-block w-50" src="images/projects/project_template.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project5">
+                  <h5>Viewing the world in third-person - experimental considerations for a successful study</h5>
+                </a>
+                <p>by Jérémy Faggion</p>
+              </div>
+            </div> -->
+
+            <!-- PROJECT 6 : ACUSTIC -->
+<!--             <div class="carousel-item">
+              <a class="scrollto active" href="#project5">
+                <img class="mx-auto d-block w-50" src="images/projects/project_template.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project5">
+                  <h5>Viewing the world in third-person - experimental considerations for a successful study</h5>
+                </a>
+                <p>by Jérémy Faggion</p>
+              </div>
+            </div> -->
+
+            <!-- PROJECT 7 : DTI -->
+            <div class="carousel-item">
+              <a class="scrollto active" href="#project7">
+                <img class="mx-auto d-block w-50" src="images/projects/project7.png" alt="First slide">
+              </a>
+              <div class="carousel-caption d-none d-md-block">
+                <a class="scrollto active" href="#project7">
+                  <h5>Guidelines for tractography in primates</h5>
+                </a>
+                <p>by Melina Cordeau</p>
+              </div>
+            </div>
+
             <!-- <div class="carousel-item">
               <a class="scrollto active" href="#project1">
                 <img class="mx-auto d-block w-50" src="images/projects/project1.svg" alt="First slide">
@@ -688,6 +740,326 @@
         </div>
         <hr style="height:20px">
     <!-- ============ End of Project3 =============== -->
+
+    <!-- ======= Project4 description bullet ======= -->
+      <a class="active" id="project4">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project4.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>SLAM - A pure python package for Surface anaLysis And Modeling</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://twitter.com/auziasguillaume" target="_blank">Guillaume Auzias</a> & <a href="https://twitter.com/alexandrepron" target="_blank">Alexandre Pron</a>
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project4" role="button" aria-controls="collapse_project4"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project4">
+                <a href="https://brain-slam.github.io/slam/" target="_blank">Slam</a> is an open source python package dedicated to the representation of neuroanatomical surfaces stemming from MRI data in the form of triangular meshes and to their processing and analysis.
+                Main features include read/write gifti (and nifti) file format, geodesic distance computation, several implementations of graph Laplacian and Gradient, mesh surgery (boundary identification, large hole closing), several types of mapping between the mesh and a sphere, a disc...
+                Have a look at the <a href="https://brain-slam.github.io/slam/auto_examples/index.html" target="_blank">examples on the documentation website</a>.
+                <br>
+                <br>Goals for Brainhack:
+                <ul>
+                  <li>To improve the documentation of basic core functions and modules (e.g. the curvature.py module)</li>
+                  <li>To increase unit test coverage and quality of basic core functions and modules</li>
+                  <li>To speed-up specific pieces of code such as the computation of the curvatures</li>
+                  <li>To help potential users to get familiar with this python package depending on their use cases</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Share ideas and good time 100%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 80%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Code documentation 80%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Scientific Python 20%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                GitHub 10%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Meshes 10%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project4 =============== -->
+
+    <!-- ======= Project5 description bullet ======= -->
+      <!-- <a class="active" id="project5">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <h3>Viewing the world in third-person - experimental considerations for a successful study</h3>
+              <p>
+                by <a href="https://github.com/jeremy-fgn" target="_blank">Jérémy Faggion</a>
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project5" role="button" aria-controls="collapse_project5"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project5">
+                <ul>
+                  <li>What are you doing, for whom, and why?</li>
+                  <li>Designing an experiment to study the implications of living with a third-person point of view on mental states and self-awareness. Inspired by the study of Hubert Dolezal in 1982, using prism glasses to experience the world upside-down.</li>
+                  <li>What makes your project special and exciting?</li>
+                  <li>Visuo-tactile association in third-person point of view is hard to achieve. The challenge revolves around how to make the brain learn that association. One candidate approach is to start from a first-person point of view and gradually transition to a third-person point of view, using a camera transmitting its video feed to a headset worn by the user. Existing solutions exist for drone piloting (FPV goggles).</li>
+                  <li>How to get started?</li>
+                  <li>Identify the bottlenecks to come. Propose a design solution to allow for a gradual transition from first-person to third-person point of view. Experiment with FPV goggles and bring them to the Brainhack :)</li>
+                  <li>The outcome of this project should be in the form of schematics, pseudocode, people to reach out to and a list of resources to take inspiration from.</li>
+                  <li>Where to find key resources?</li>
+                  <li>Be clever, be wild.</li>
+                </ul>
+
+                <br>
+                <br>Goals for Brainhack:
+                <ul>
+                  <li>The outcome of this project should be in the form of schematics, pseudocode, people to reach out to and a list of resources to take inspiration from.</li>
+                  <li>Iteration cycles should be as short as possible.</li>
+                  <li>Testing should ideally happen on-site during the hackathon.</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Sensorimotor association 40%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Engineering/Coding 30%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Fast iteration mindset 20%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                VR 10%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px"> -->
+    <!-- ============ End of Project5 =============== -->
+
+    <!-- ======= Project6 description bullet ======= -->
+      <!-- <a class="active" id="project6">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project_template.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <h3>Spectral profile of the neural encoding of acoustic features during speech and music perception</h3>
+              <p>
+                by <a href="https://twitter.com/bnmorillon" target="_blank">Benjamin Morillon</a>
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project6" role="button" aria-controls="collapse_project6"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project6">
+
+                Text of the description
+
+                <br>
+                <br>Goals for Brainhack:
+                <ul>
+                  <li>The outcome of this project should be in the form of schematics, pseudocode, people to reach out to and a list of resources to take inspiration from.</li>
+                  <li>Iteration cycles should be as short as possible.</li>
+                  <li>Testing should ideally happen on-site during the hackathon.</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Sensorimotor association 40%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 30%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Engineering/Coding 30%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Fast iteration mindset 20%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 10%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                VR 10%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px"> -->
+    <!-- ============ End of Project6 =============== -->
+
+    <!-- ======= Project7 description bullet ======= -->
+      <a class="active" id="project7">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project7.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>Guidelines for tractography in primates</h3>
+              <!-- </a> -->
+              <p>
+                by <a href="https://twitter.com/CordeauMelina" target="_blank">Melina Cordeau</a>, David Meunier, Julien Sein & Arnaud Le Troter
+              </p>
+
+              <hr>
+
+              <button class="btn-descript btn-link font-weight-bold" data-toggle="collapse" href="#collapse_project7" role="button" aria-controls="collapse_project7"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project7">
+                Create guidelines i.e. summarize all the important things to know, step by step, to make a good tractogram edition for non-human primate species. A document that would bring together all the parameters that are similar and those that differ between species for preprocessing and tractography. We will focus on marmosets, macaques, baboons and chimpanzees.
+                <br>
+                <br>Goals for Brainhack:
+                <ul>
+                  <li>Definition of guidelines based on human best practices</li>
+                  <li>Creation of a parameter file for each primate species</li>
+                  <li>Implementation of a corresponding Wiki in PRIME-RE platform</li>
+                </ul>
+
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This is a multimodal project, a mix of coding and non-coding skills are required:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Be friendly, tolerant, and inclusive 100%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                DWI data skills 75%
+              </div>
+            </div>            
+
+            <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python coding 25%
+              </div>
+            </div>
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project7 =============== -->
 
     </section>
 
